# AOD-ActionServer

./: Cargo.toml
.direnv/: nix-profile-25.05-kdynjy1mbgkdg4p1  nix-profile-25.05-kdynjy1mbgkdg4p1.rc
src/: api.rs  config.rs  main.rs  mdns_resolver.rs
src/api/: command.rs  keyevent.rs  mouseevent.rs  notification.rs  settings.rs
