[package]
name = "aod-actionserver"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = { version = "0.3.0", features = ["wayland"] }
lazy_static = "1.5.0"
libmdns = "0.9.1"
local-ip-address = "0.6.3"
notify-rust = "4.11.5"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.218"
toml = "0.8.20"
